--- a/cours.html
+++ b/cours.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keybord" content="information,school">
   <meta name="author" content="Loïc Verdier">
-  <link rel="stylesheet" href="proj-page-programe.css" media="all" type="text/css">
+  <link rel="stylesheet" href="./cours.css" media="all" type="text/css">
   <title>programe année 1 </title>
 </head>
 <body>
@@ -16,27 +16,39 @@
 <header>
 
     <aside>
-        <img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo">
+      <img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo">
     </aside>
 
     <div id="center">
 
-        <p>L’ÉCOLE DES EXPERTS MÉTIERS
-            DE L’INFORMATIQUE</p>
+      <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
-        <div id="socials">
-            <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
-        </div>
+      <div id="socials">
+        <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
+        <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
+        <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
+        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
+        <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+      </div>
 
     </div>
-    <button>Contacts</button>
-</header>
 
+    <nav>
+      <input type="checkbox" id="navbutton" class="toggle">
+      <label for="navbutton"><i class="fa-solid fa-bars"></i>
+
+        <div id="navbar">
+          <a href="./index.html#">Accueil</a>
+          <a href="./cours.html">Cours</a>
+          <a href="./planing.html">Planing</a>
+          <a href="./trombinoscope.html">Trombinoscope</a>
+          <a href="./contacts.html">Contacts</a>
+        </div>
+      </label>
+    </nav>
+
+  </header>
 <!--haut de page-->
 <div id="fond-title"><h1 id="title">Vivre une année  au coeur de l'informatique</h1></div>
 <div id="hdp">
