--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <a href="./cours.html">Cours</a>
           <a href="./planing.html">Planing</a>
           <a href="./trombinoscope.html">Trombinoscope</a>
-          <a href="./contacts">Contacts</a>
+          <a href="./contacts.html">Contacts</a>
         </div>
       </label>
     </nav>
