--- a/planing.html
+++ b/planing.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keybord" content="information,school">
     <meta name="author" content="Loïc Verdier">
-    <link rel="stylesheet" href="emploie%20du%20tempsx.css" media="all" type="text/css">
+    <link rel="stylesheet" href="planing.css" media="all" type="text/css">
     <title>programe année 1 </title>
   </head>
 <body>
@@ -21,8 +21,7 @@
 
   <div id="center">
 
-    <p>L’ÉCOLE DES EXPERTS MÉTIERS
-      DE L’INFORMATIQUE</p>
+    <p>L’ÉCOLE DES EXPERTS MÉTIERS DE L’INFORMATIQUE</p>
 
     <div id="socials">
       <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
@@ -34,7 +33,21 @@
     </div>
 
   </div>
-  <button>Contacts</button>
+
+  <nav>
+    <input type="checkbox" id="navbutton" class="toggle">
+    <label for="navbutton"><i class="fa-solid fa-bars"></i>
+
+      <div id="navbar">
+        <a href="./index.html#">Accueil</a>
+        <a href="./cours.html">Cours</a>
+        <a href="./planing.html">Planing</a>
+        <a href="./trombinoscope.html">Trombinoscope</a>
+        <a href="./contacts.html">Contacts</a>
+      </div>
+    </label>
+  </nav>
+
 </header>
 
   <!-- flèche remonter en haut de la page-->
