--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="main.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="./trombinoscope.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>Trombinoscope</title>
 </head>
@@ -43,7 +43,7 @@
             <a href="./cours.html">Cours</a>
             <a href="./planing.html">Planing</a>
             <a href="./trombinoscope.html">Trombinoscope</a>
-            <a href="./contacts">Contacts</a>
+            <a href="./contacts.html">Contacts</a>
           </div>
         </label>
       </nav>
