--- a/contacts.html
+++ b/contacts.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keybord" content="information,school">
-  <meta name="author" content="Loïc Verdier">
+  <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link rel="stylesheet" href="./contacts.css" media="all" type="text/css">
   <title>formulaire</title>
 </head>
@@ -139,18 +139,8 @@
         </div>
 
       </div>
+    </footer>
   </div>
-
-
-
-  </footer>
-</body>
-
-</html>
-
-
-</div>
-
 </body>
 
 </html>
