--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link href="main.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>Supinfo</title>
@@ -286,7 +287,6 @@
         <div></div>
         <div class="button"><button>plus d'informations sur les filiaires</button></div>
         <div></div>
-
       </div>
     </section>
 
@@ -315,9 +315,7 @@
           </div>
           <div class="card">
 
-
             <img src="./Medias/Background/ionis-group.jpg" alt="ionis group galaxy">
-
 
             <div class="key-elements">
               <div class="card">
@@ -379,7 +377,6 @@
     </div>
 
   </footer>
-
 </body>
 
 </html>
