--- a/planing.html
+++ b/planing.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="keybord" content="information,school">
-  <meta name="author" content="Loïc Verdier">
+  <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link rel="stylesheet" href="planing.css" media="all" type="text/css">
   <title>programe année 1 </title>
 </head>
@@ -158,10 +158,6 @@
       </div>
 
     </div>
-    </div>
-
-
-
   </footer>
 </body>
 
