--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link href="./trombinoscope.css" media="all" rel="stylesheet" type="text/css" />
   <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>Trombinoscope</title>
@@ -239,3 +240,5 @@
     </footer>
   </div>
 </body>
+
+</html>
