--- a/index.html
+++ b/index.html
@@ -284,10 +284,9 @@
         <div class="card"> <img src="./Medias/Background/human-skills.jpg">
           <h3>Human skills & Management<h3>
         </div>
-        <div></div>
-        <div class="button"><button>plus d'informations sur les filiaires</button></div>
-        <div></div>
+
       </div>
+      <div class="button"><button>plus d'informations sur les filiaires</button></div>
     </section>
 
     <section id="ionis">
@@ -344,12 +343,12 @@
 
   <footer>
 
-    <img src="./Medias/Logo/logo-supinfo-white.png" height="100" alt="logo supinfo">
+    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
 
-    <div id="text">
+    <div id="infos">
       <h2>SUPINFO</h2>
-      <h4>l'école des experts métiers de l'informatique</h4>
-      <p>Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
+      <p>l'école des experts métiers de l'informatique <br> <br>
+        Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
         qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
         en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
         opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
@@ -369,13 +368,11 @@
       <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
     </div>
 
-
-    <div id="menu">
+    <div id="redirect">
       <p>Contacts</p>
       <p>Planing</p>
       <p>Promo</p>
     </div>
-
   </footer>
 </body>
 
