--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -54,163 +54,164 @@
     <div id="spacing"></div>
 
     <h2>Trombinoscope de la promotion</h2>
-
-    <main id="grid">
-      <div class="card">
-        <img src="./Medias/students/1.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+    <div id="container">
+      <main id="grid">
+        <div class="card">
+          <img src="./Medias/students/1.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/2.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/2.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/3.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/3.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/4.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/4.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/5.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/5.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/6.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/6.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/7.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/7.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/8.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/8.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/9.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/9.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/10.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/10.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/11.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/11.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/12.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/12.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/13.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/13.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/14.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/14.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/15.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/15.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-      <div class="card">
-        <img src="./Medias/students/16.jpg" height="200vh" width="150vh">
-        <div class="text">
-          <h3>John Doe</h3>
-          <p>06/12/34/56/78</p>
-          <p>john.doe@supinfo.com</p>
-          <p>59000 Lille</p>
+        <div class="card">
+          <img src="./Medias/students/16.jpg" height="200vh" width="150vh">
+          <div class="text">
+            <h3>John Doe</h3>
+            <p>06/12/34/56/78</p>
+            <p>john.doe@supinfo.com</p>
+            <p>59000 Lille</p>
+          </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
 
 
     <footer>
 
-      <img src="./Medias/Logo/logo-supinfo-white.png" height="100" alt="logo supinfo">
+      <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
 
-      <div id="text">
+      <div id="infos">
         <h2>SUPINFO</h2>
-        <h4>l'école des experts métiers de l'informatique</h4>
-        <p>Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
+        <p>l'école des experts métiers de l'informatique <br> <br>
+          Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
           qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
           en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
           opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
@@ -230,13 +231,11 @@
         <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
       </div>
 
-
-      <div id="menu">
+      <div id="redirect">
         <p>Contacts</p>
         <p>Planing</p>
         <p>Promo</p>
       </div>
-
     </footer>
   </div>
 </body>
