--- a/contacts.html
+++ b/contacts.html
@@ -8,11 +8,11 @@
   <meta name="keybord" content="information,school">
   <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link rel="stylesheet" href="./contacts.css" media="all" type="text/css">
-  <title>formulaire</title>
+  <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
+  <title>Contacts</title>
 </head>
 
 <body>
-  <div id="top"></div>
 
   <header>
 
@@ -50,97 +50,104 @@
     </nav>
 
   </header>
-  </div>
+
+
   <!-- flèche remonter en haut de la page-->
   <div id="scroll_top">
     <a href="#top"><i class="fa-solid fa-arrow-up" id="arrow"></i></a>
   </div>
-  <div id="haut"></div>
-  <div id="title">
-    <h1>Contact</h1>
-  </div>
 
-  <p>Pour permettre à Supinfo de vous contacter merci de remplir le formulaire suivant ou de contacter
-    Supinfo via les informations de la page contact </p>
+  <div id="spacing"></div>
 
-  <p>*Tous les champs sont obligatoires</p> <br><br><br>
-
-  <div id="contact">
-    <label>Campus souhaité</label>
-    <select name="campus">
-      <option value="0"></option>
-      <option value="1">Lille</option>
-      <option value="2">Lyon</option>
-      <option value="3">Paris</option>
-      <option value="4">Caen</option>
-      <option value="5">Tours</option>
-    </select>
-
-    <label>Civilité</label>
-    <select>
-      <option value="0"></option>
-      <option value="1">Monsieur</option>
-      <option value="2">Madame</option>
-    </select>
-
-    <label>Nom</label>
-    <input type="text" name="Nom">
-
-    <label>Prénom</label>
-    <input type="text" name="Prénom">
-
-    <label>E-mail</label>
-    <input type="email" name="email">
-
-    <label>Téléphone</label>
-    <input type="tel" name="phone">
-
-    <input type="submit" value="envoyer" id="envoyer">
-
-    <footer>
-      <div id="bottom">
+  <main>
+    <div id="title">
+      <h1>Contact</h1>
+    </div>
 
 
-        <div>
-          <img src="./Medias/Logo/logo-supinfo-white.png" height="100" ID="imgfoot" alt="logo supinfo">
-        </div>
-        <div id="txtbottom">
-          <h2>SUPINFO</h2>
-          <p>l'école des experts métiers de l'informatique <br> <br>
-            Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
-            qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
-            en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
-            opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
-            et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
-            des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
-            grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
-            distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
-            travailleurs de suivre leur formation dans un campus d’accueil. </p>
-        </div>
+    <div class="card">
+      <h3>Pour permettre à Supinfo de vous contacter merci de remplir le formulaire suivant ou de contacter
+        Supinfo via les informations de la page contact </h3>
+      <form>
 
-
-
-        <div id="rsocial">
-          <div id="social">
-            <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-            <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-            <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-            <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i
-                class="fa-brands fa-linkedin"></i></a>
-            <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-            <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+        <section>
+          <div class="ensemble">
+            <label for="lastname">Nom *</label>
+            <input type="text" id="lastname" required>
           </div>
-        </div>
 
-        <div id="menu">
-          <p>Contacts</p>
-          <p>Planing</p>
-          <p>Promo</p>
-        </div>
+          <div class="ensemble">
+            <label for="name">Prénom *</label>
+            <input type="text" id="name" required>
+          </div>
+        </section>
 
-      </div>
-    </footer>
-  </div>
+        <section>
+          <div class="ensemble">
+            <label for="email">Email *</label>
+            <input type="email" id="email" required>
+          </div>
+
+          <div class="ensemble">
+            <label for="phone">Téléphone</label>
+            <input type="tel" id="phone" />
+          </div>
+        </section>
+
+        <label for="message">Message *</label>
+        <textarea id="message" placeholder="Veuillez entrer votre message..." required></textarea>
+
+        <label for="campsus">Campus a contacter</label>
+        <select id="campsus" required>
+          <option value="0">-- Selectionnez un campus --</option>
+          <option value="1">Lille</option>
+          <option value="2">Lyon</option>
+          <option value="3">Paris</option>
+          <option value="4">Caen</option>
+          <option value="5">Tours</option>
+        </select>
+
+        <div class="ensemble">
+          <input type="submit" value="envoyer" id="envoyer">
+          <input type="reset" value="reset">
+        </div>
+      </form>
+    </div>
+  </main>
+
+  <footer>
+
+    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
+
+    <div id="infos">
+      <h2>SUPINFO</h2>
+      <p>l'école des experts métiers de l'informatique <br> <br>
+        Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
+        qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
+        en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
+        opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
+        et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
+        des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
+        grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
+        distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
+        travailleurs de suivre leur formation dans un campus d’accueil. </p>
+    </div>
+
+    <div id="socials">
+      <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+    </div>
+
+    <div id="redirect">
+      <p>Contacts</p>
+      <p>Planing</p>
+      <p>Promo</p>
+    </div>
+  </footer>
 </body>
 
 </html>
