--- a/planing.html
+++ b/planing.html
@@ -9,11 +9,11 @@
   <meta name="keybord" content="information,school">
   <meta name="author" content="Baptiste Crepin, Loïc Verdier">
   <link rel="stylesheet" href="planing.css" media="all" type="text/css">
+  <link rel="icon" href="Medias/favicon-supinfo.png" sizes="192x192">
   <title>programe année 1 </title>
 </head>
 
 <body>
-  <div id="top"></div>
 
   <header>
 
@@ -52,10 +52,8 @@
 
   </header>
 
-  <!-- flèche remonter en haut de la page-->
-  <div id="scroll_top">
-    <a href="#top"><i class="fa-solid fa-arrow-up" id="arrow"></i></a>
-  </div>
+  <div id="spacing"></div>
+
   </div>
   <div id="grille">
 
@@ -63,6 +61,7 @@
       <th colspan="10">
         <h3> Emploie du temps</h3>
       </th>
+
       <tr>
         <td></td>
         <td>Lundi</td>
@@ -71,6 +70,7 @@
         <td>Jeudi</td>
         <td>Vendredi</td>
       </tr>
+
       <tr>
         <td>9h - 10h</td>
         <td rowspan="3" class="rentre">rentrée</td>
@@ -80,18 +80,21 @@
         <td rowspan="3" class="css">CSS</td>
 
       </tr>
+
       <tr>
         <td>10h - 11h</td>
-
       </tr>
+
       <tr>
         <td>11h - 12h</td>
       </tr>
+
       <tr>
         <td>12h - 13h</td>
         <td colspan="10" id="midi">pause du midi</td>
 
       </tr>
+
       <tr>
         <td>13h - 14h</td>
         <td rowspan="4" class="rentre">rentrée</td>
@@ -100,16 +103,15 @@
         <td rowspan="4" class="css">CSS</td>
         <td rowspan="4" class="css">CSS</td>
       </tr>
+
       <tr>
         <td>14h - 15h</td>
-
-
-
       </tr>
+
       <tr>
         <td>15h - 16h</td>
-
       </tr>
+
       <tr>
         <td>16h - 17h</td>
 
@@ -117,46 +119,38 @@
 
     </table>
   </div>
+
   <footer>
-    <div id="bottom">
 
+    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
 
-      <div>
-        <img src="./Medias/Logo/logo-supinfo-white.png" height="100" ID="imgfoot" alt="logo supinfo">
-      </div>
-      <div id="txtbottom">
-        <h2>SUPINFO</h2>
-        <p>l'école des experts métiers de l'informatique <br> <br>
-          Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
-          qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
-          en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
-          opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
-          et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
-          des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
-          grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
-          distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
-          travailleurs de suivre leur formation dans un campus d’accueil. </p>
-      </div>
+    <div id="infos">
+      <h2>SUPINFO</h2>
+      <p>l'école des experts métiers de l'informatique <br> <br>
+        Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
+        qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
+        en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
+        opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
+        et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
+        des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
+        grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
+        distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
+        travailleurs de suivre leur formation dans un campus d’accueil. </p>
+    </div>
 
+    <div id="socials">
+      <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+    </div>
 
-
-      <div id="rsocial">
-        <div id="social">
-          <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-          <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-          <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-          <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-          <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-          <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
-        </div>
-      </div>
-
-      <div id="menu">
-        <p>Contacts</p>
-        <p>Planing</p>
-        <p>Promo</p>
-      </div>
-
+    <div id="redirect">
+      <p>Contacts</p>
+      <p>Planing</p>
+      <p>Promo</p>
     </div>
   </footer>
 </body>
