changed the color theme
changed the color theme from purple to green and made the changes to make it easier in the futur

--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
           </div>
           <div class="card">
 
-            <img src="./Medias/Background/ionis-group.jpg" alt="ionis group galaxy">
+            <img src="./Medias/Background/ionis-group-removebg.png" alt="ionis group galaxy">
 
             <div class="key-elements">
               <div class="card">
