--- a/planing.html
+++ b/planing.html
@@ -52,74 +52,74 @@
 
   </header>
 
-  <div id="spacing"></div>
+  <main class="planning">
+    <div id="spacing"></div>
 
-  </div>
-  <div id="grille">
+    <div id="grille">
 
-    <table>
-      <th colspan="10">
-        <h3> Emploie du temps</h3>
-      </th>
+      <table>
+        <th colspan="10">
+          <h3> Emploie du temps</h3>
+        </th>
 
-      <tr>
-        <td></td>
-        <td>Lundi</td>
-        <td>Mardi</td>
-        <td>Mercredi</td>
-        <td>Jeudi</td>
-        <td>Vendredi</td>
-      </tr>
+        <tr>
+          <td></td>
+          <td>Lundi</td>
+          <td>Mardi</td>
+          <td>Mercredi</td>
+          <td>Jeudi</td>
+          <td>Vendredi</td>
+        </tr>
 
-      <tr>
-        <td>9h - 10h</td>
-        <td rowspan="3" class="rentre">rentrée</td>
-        <td rowspan="3" class="html">HTML</td>
-        <td rowspan="3" class="html">HTML</td>
-        <td rowspan="3" class="css">CSS</td>
-        <td rowspan="3" class="css">CSS</td>
+        <tr>
+          <td>9h - 10h</td>
+          <td rowspan="3" class="rentre">rentrée</td>
+          <td rowspan="3" class="html">HTML</td>
+          <td rowspan="3" class="html">HTML</td>
+          <td rowspan="3" class="css">CSS</td>
+          <td rowspan="3" class="css">CSS</td>
 
-      </tr>
+        </tr>
 
-      <tr>
-        <td>10h - 11h</td>
-      </tr>
+        <tr>
+          <td>10h - 11h</td>
+        </tr>
 
-      <tr>
-        <td>11h - 12h</td>
-      </tr>
+        <tr>
+          <td>11h - 12h</td>
+        </tr>
 
-      <tr>
-        <td>12h - 13h</td>
-        <td colspan="10" id="midi">pause du midi</td>
+        <tr>
+          <td>12h - 13h</td>
+          <td colspan="10" id="midi">pause du midi</td>
 
-      </tr>
+        </tr>
 
-      <tr>
-        <td>13h - 14h</td>
-        <td rowspan="4" class="rentre">rentrée</td>
-        <td rowspan="4" class="html">HTML </td>
-        <td rowspan="4" class="html">HTML</td>
-        <td rowspan="4" class="css">CSS</td>
-        <td rowspan="4" class="css">CSS</td>
-      </tr>
+        <tr>
+          <td>13h - 14h</td>
+          <td rowspan="4" class="rentre">rentrée</td>
+          <td rowspan="4" class="html">HTML </td>
+          <td rowspan="4" class="html">HTML</td>
+          <td rowspan="4" class="css">CSS</td>
+          <td rowspan="4" class="css">CSS</td>
+        </tr>
 
-      <tr>
-        <td>14h - 15h</td>
-      </tr>
+        <tr>
+          <td>14h - 15h</td>
+        </tr>
 
-      <tr>
-        <td>15h - 16h</td>
-      </tr>
+        <tr>
+          <td>15h - 16h</td>
+        </tr>
 
-      <tr>
-        <td>16h - 17h</td>
+        <tr>
+          <td>16h - 17h</td>
 
-      </tr>
+        </tr>
 
-    </table>
-  </div>
-
+      </table>
+    </div>
+  </main>
   <footer>
 
     <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
