--- a/trombinoscope.html
+++ b/trombinoscope.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-  <div id="trombinoscope">
+  <main id="trombinoscope">
 
     <header>
 
@@ -55,7 +55,7 @@
 
     <h2>Trombinoscope de la promotion</h2>
     <div id="container">
-      <main id="grid">
+      <div id="grid">
         <div class="card">
           <img src="./Medias/students/1.jpg" height="200vh" width="150vh">
           <div class="text">
@@ -200,44 +200,44 @@
             <p>59000 Lille</p>
           </div>
         </div>
-      </main>
+      </div>
+    </div>
+  </main>
+
+  <footer>
+
+    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
+
+    <div id="infos">
+      <h2>SUPINFO</h2>
+      <p>l'école des experts métiers de l'informatique <br> <br>
+        Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
+        qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
+        en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
+        opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
+        et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
+        des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
+        grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
+        distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
+        travailleurs de suivre leur formation dans un campus d’accueil. </p>
     </div>
 
+    <div id="socials">
+      <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
+      <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
+      <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
+      <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
+      <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
+      <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
+    </div>
 
-    <footer>
+    <div id="redirect">
+      <p>Contacts</p>
+      <p>Planing</p>
+      <p>Promo</p>
+    </div>
+  </footer>
 
-      <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
-
-      <div id="infos">
-        <h2>SUPINFO</h2>
-        <p>l'école des experts métiers de l'informatique <br> <br>
-          Fondée en 1965, SUPINFO fut l’une des premières écoles supérieures à avoir compris la place
-          qu’allait prendre l’informatique dans les entreprises et la société. Grâce à son parcours
-          en 5 ans (Master of Engineering), SUPINFO permet à des jeunes en quête de formations concrètes,
-          opérationnelles, « orientées métiers », de trouver des carrières qui correspondent à leur passion
-          et leur motivation, aussi de procurer aux entreprises des milliers de cadres techniques et
-          des ingénieurs férus d’innovation. Depuis 2020, SUPINFO propose de suivre son parcours innovant
-          grâce au Distance Learning Program, depuis l’un de ses campus hybrides en Blended Learning ou à
-          distance depuis son campus virtuel. Les campus hybrides IONIS permettent aux étudiants ou
-          travailleurs de suivre leur formation dans un campus d’accueil. </p>
-      </div>
-
-      <div id="socials">
-        <a href="https://www.facebook.com/supinfo"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://www.instagram.com/supinfo/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="https://twitter.com/SUPINFO"><i class="fa-brands fa-twitter"></i></a>
-        <a href="https://fr.linkedin.com/school/supinfo-ecoleinformatique/"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://www.youtube.com/channel/UCmi8vixnGa8z5sJF_NZCUzg"><i class="fa-brands fa-youtube"></i></a>
-        <a href="https://discord.com/invite/K3ebhDTupy"><i class="fa-brands fa-discord"></i></a>
-      </div>
-
-      <div id="redirect">
-        <p>Contacts</p>
-        <p>Planing</p>
-        <p>Promo</p>
-      </div>
-    </footer>
-  </div>
 </body>
 
 </html>
