--- a/cours.html
+++ b/cours.html
@@ -18,7 +18,7 @@
   <header>
 
     <aside>
-      <img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo">
+      <a href="./index.html#"><img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo"></a>
     </aside>
 
     <div id="center">
@@ -43,7 +43,7 @@
         <div id="navbar">
           <a href="./index.html#">Accueil</a>
           <a href="./cours.html">Cours</a>
-          <a href="./planing.html">Planing</a>
+          <a href="./planning.html">planning</a>
           <a href="./trombinoscope.html">Trombinoscope</a>
           <a href="./contacts.html">Contacts</a>
         </div>
@@ -224,7 +224,7 @@
 
     <div id="redirect">
       <p>Contacts</p>
-      <p>Planing</p>
+      <p>planning</p>
       <p>Promo</p>
     </div>
   </footer>
