--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <header>
 
     <aside>
-      <img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo">
+      <a href="./index.html#"><img src="Medias/Logo/logo-supinfo-white.png" alt="Supinfo logo"></a>
     </aside>
 
     <div id="center">
@@ -40,7 +40,7 @@
         <div id="navbar">
           <a href="./index.html#">Accueil</a>
           <a href="./cours.html">Cours</a>
-          <a href="./planing.html">Planing</a>
+          <a href="./planning.html">planning</a>
           <a href="./trombinoscope.html">Trombinoscope</a>
           <a href="./contacts.html">Contacts</a>
         </div>
@@ -286,7 +286,9 @@
         </div>
 
       </div>
-      <div class="button"><button>plus d'informations sur les filiaires</button></div>
+      <a href="./cours.html">
+        <div class="button"><button>plus d'informations sur les filiaires</button></div>
+      </a>
     </section>
 
     <section id="ionis">
@@ -317,22 +319,26 @@
             <img src="./Medias/Background/ionis-group-removebg.png" alt="ionis group galaxy">
 
             <div class="key-elements">
-              <div class="card">
-                <i class="fa-solid fa-user-group"></i>
-                <p>30 000 étudiants</p>
-              </div>
-              <div class="card">
-                <i class="fa-solid fa-user-graduate"></i>
-                <p>Plus de 80 000 Anciens</p>
-              </div>
-              <div class="card">
-                <i class="fa-solid fa-school"></i>
-                <p>27 campus</p>
-              </div>
-              <div class="card">
-                <i class="fa-solid fa-handshake"></i>
-                <p>Numéro un de l’enseignement de l’informatique et de la tech en France</p>
-              </div>
+              <section>
+                <div class="card">
+                  <i class="fa-solid fa-user-group"></i>
+                  <p>30 000 étudiants</p>
+                </div>
+                <div class="card">
+                  <i class="fa-solid fa-user-graduate"></i>
+                  <p>Plus de 80 000 Anciens</p>
+                </div>
+              </section>
+              <section>
+                <div class="card">
+                  <i class="fa-solid fa-school"></i>
+                  <p>27 campus</p>
+                </div>
+                <div class="card">
+                  <i class="fa-solid fa-handshake"></i>
+                  <p>Numéro un de l’enseignement de l’informatique et de la tech en France</p>
+                </div>
+              </section>
             </div>
           </div>
         </div>
@@ -370,7 +376,7 @@
 
     <div id="redirect">
       <p>Contacts</p>
-      <p>Planing</p>
+      <p>Planning</p>
       <p>Promo</p>
     </div>
   </footer>
