--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
 
       </div>
       <a href="./cours.html">
-        <div class="button"><button>plus d'informations sur les filiaires</button></div>
+        <div class="button"><button>Plus d'informations sur les filiaires</button></div>
       </a>
     </section>
 
@@ -326,7 +326,7 @@
                 </div>
                 <div class="card">
                   <i class="fa-solid fa-user-graduate"></i>
-                  <p>Plus de 80 000 Anciens</p>
+                  <p>Plus de 80 000 anciens</p>
                 </div>
               </section>
               <section>
@@ -336,7 +336,7 @@
                 </div>
                 <div class="card">
                   <i class="fa-solid fa-handshake"></i>
-                  <p>Numéro un de l’enseignement de l’informatique et de la tech en France</p>
+                  <p>numéro un de l’enseignement de l’informatique et de la tech en France</p>
                 </div>
               </section>
             </div>
@@ -349,7 +349,7 @@
 
   <footer>
 
-    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
+    <a href="./index.html#"><img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo"></a>
 
     <div id="infos">
       <h2>SUPINFO</h2>
@@ -375,9 +375,12 @@
     </div>
 
     <div id="redirect">
-      <p>Contacts</p>
-      <p>Planning</p>
-      <p>Promo</p>
+      <h2>Informations pratiques</h2>
+      <a href="./index.html#">Accueil</a>
+      <a href="./cours.html">Cours</a>
+      <a href="./planning.html">planning</a>
+      <a href="./trombinoscope.html">Trombinoscope</a>
+      <a href="./contacts.html">Contacts</a>
     </div>
   </footer>
 </body>
