--- a/cours.html
+++ b/cours.html
@@ -197,7 +197,7 @@
 
   <footer>
 
-    <img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo">
+    <a href="./index.html#"><img src="./Medias/Logo/logo-supinfo-white.png" alt="logo supinfo"></a>
 
     <div id="infos">
       <h2>SUPINFO</h2>
@@ -223,9 +223,12 @@
     </div>
 
     <div id="redirect">
-      <p>Contacts</p>
-      <p>planning</p>
-      <p>Promo</p>
+      <h2>Informations pratiques</h2>
+      <a href="./index.html#">Accueil</a>
+      <a href="./cours.html">Cours</a>
+      <a href="./planning.html">planning</a>
+      <a href="./trombinoscope.html">Trombinoscope</a>
+      <a href="./contacts.html">Contacts</a>
     </div>
   </footer>
 </body>
