--- a/contacts.html
+++ b/contacts.html
@@ -108,8 +108,8 @@
         </select>
 
         <div class="ensemble">
-          <input type="submit" value="envoyer" id="envoyer">
-          <input type="reset" value="reset">
+          <input type="submit" value="envoyer" id="send">
+          <input type="reset" value="reset" id="reset">
         </div>
       </form>
     </div>
